--- a/PAGES/3a_packages/index.html
+++ b/PAGES/3a_packages/index.html
@@ -480,7 +480,7 @@ section a:hover{
                 <h2> LINKS TO SECTIONS </h2>
             </div>
                 <div class="modal-body">
-                    To quickly access a specific section of this page, simply hover over the title of the desired section and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
+                    To quickly share a link that goes to a specific section, hover over the title and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
                 <span class="brmine"></span>
             </div>
             <div class="modal-header">
@@ -2806,8 +2806,8 @@ average&#40;x&#41;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Macros</h2></p>
-<p>Macros are ubiquitous in Julia. They enable the automation of tasks that, otherwise, would be tedious and time-consuming to perform. The website will only cover how to apply macros. The reason is that defining custom macros requires knowledge of Julia&#39;s metaprogramming capabilities, which is beyond the scope of the website. </p>
-<p>The concept of macros may not be immediately clear. Hopefully, once we explore applications in later sections, many of your questions will be cleared up. </p>
+<p>Macros are ubiquitous in Julia. They enable the automation of tasks that, otherwise, would be tedious and time-consuming to perform. On this website, we&#39;ll only cover how to apply macros. The reason is that defining custom macros requires knowledge of Julia&#39;s metaprogramming capabilities, which is beyond the scope of the website. </p>
+<p>The usefulness of macros may not be immediately clear at this point. Hopefully, once we explore applications in later sections, many of your questions will be cleared up. </p>
 <p> <h4> Applying Macros </h4><div class="own-anchors"><a name="macros"></a></div></p>
 <p>Macros and functions are similar, with both performing operations on an input. Their main difference is that macros take statements as their argument, while functions pass variables. Additionally, macros may return a statement as its output, a capability not shared by functions.</p>
 <p>Specifically, a macro can take a whole expression <code>x &#61; some_function&#40;y&#41;</code> as its argument, possibly modifying <code>x</code>, <code>&#61;</code>, and <code>some_function&#40;y&#41;</code>, or add more lines of code. Eventually, it can return a modified version <code>x &#61; some_function&#40;y&#41;</code>. </p>
