--- a/PAGES/3b_define_func/index.html
+++ b/PAGES/3b_define_func/index.html
@@ -480,7 +480,7 @@ section a:hover{
                 <h2> LINKS TO SECTIONS </h2>
             </div>
                 <div class="modal-body">
-                    To quickly access a specific section of this page, simply hover over the title of the desired section and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
+                    To quickly share a link that goes to a specific section, hover over the title and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
                 <span class="brmine"></span>
             </div>
             <div class="modal-header">
@@ -2595,7 +2595,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Recall that functions can be classified into  <em>i)</em> built-in functions,  <em>ii)</em> third-party functions, and  <em>iii)</em> user-defined functions. The previous section has covered the first two. <strong>We now focus on iii)</strong>.</p>
+<p>Recall that functions can be classified into  <em>i)</em> built-in functions,  <em>ii)</em> third-party functions, and  <em>iii)</em> user-defined functions. The previous section has covered the first two, and <strong>we now focus on iii)</strong>.</p>
 <p>      </div>
     </div>
   </div>
@@ -2624,7 +2624,7 @@ end</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>The output of the compact form is given by the only operation contained. The standard form, for its part, returns the last line as its output. You can alternatively specify the output to return through the keyword <code>return</code>. You can also return multiple outputs by defining a collection as the function&#39;s result. For this purpose, tuples are the most common choice. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> This is in fact because tuples are more performant than vectors, as long as the number of elements is small.  </span></span> </p>
+<p>The output of the compact form is given by the only operation contained. For its part, the standard form returns the last line as its output. You can alternatively specify the output to return through the keyword <code>return</code>. You can also return multiple outputs by defining a collection as the function&#39;s result. For this purpose, tuples are the most common choice. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> This is in fact because tuples are more performant than vectors, as long as the number of elements is small.  </span></span> </p>
 <p>These approaches to specifying an output are illustrated below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2686,7 +2686,7 @@ end</code></pre>
 <p></div> </div>  </details></div>
 <p>An example of functions without arguments is <code>Pkg.update&#40;&#41;</code>, which was introduced when we studied packages.  </div>  </div>
 <p> <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>The Order In Which Functions Are Defined is Irrelevant</strong>  </span>  </div>  <div class=content>     A function can be defined anywhere in the code, as long as it&#39;s not called. In fact, you can define a function that calls another function, even if the latter hasn&#39;t been defined yet. To illustrate this, consider the following two code snippets, which are functionally equivalent.</p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>The Order In Which Functions Are Defined is Irrelevant</strong>  </span>  </div>  <div class=content>     A function can be defined anywhere in the code. In fact, you can define a function that calls another function, even if the latter hasn&#39;t been defined yet. To illustrate this, consider the following two code snippets, which are functionally equivalent.</p>
 <p> <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2718,7 +2718,7 @@ foo1&#40;x&#41; &#61; 2 &#43; foo2&#40;x&#41;</code></pre>
         <h2>Positional and Keyword Arguments</h2></p>
 <p>Up to this point, we&#39;ve been defining and calling functions using the notation <code>foo&#40;x,y&#41;</code>. The distinctive feature of this syntax is that arguments are passed in a specific order. Thus, <code>foo&#40;1,2&#41;</code> assigns the first argument to <code>x</code> and the second to <code>y</code>. Function arguments of this kind are known as <strong>positional arguments</strong>.</p>
 <p>One major drawback of positional arguments is their susceptibility to silent errors: if we accidentally swap the positions of arguments, the function may still provide an output. As the number of arguments grows, the likelihood of introducing bugs increases, making it more challenging to detect and debug errors.</p>
-<p>One way to circumvent this issue is to use <strong>keyword arguments</strong>. They require function calls to explicitly specify their arguments using a syntax like <code>foo&#40;x&#61;2,y&#61;4&#41;</code>. In this case, the order of arguments becomes also irrelevant, rendering <code>foo&#40;x&#61;2,y&#61;4&#41;</code> and <code>foo&#40;y&#61;4,x&#61;2&#41;</code> valid and equivalent.</p>
+<p>One way to circumvent this issue is to use <strong>keyword arguments</strong>. They require function calls to explicitly specify their arguments using a syntax like <code>foo&#40;x&#61;2,y&#61;4&#41;</code>. In this case, the order of arguments also becomes irrelevant, rendering <code>foo&#40;x&#61;2,y&#61;4&#41;</code> and <code>foo&#40;y&#61;4,x&#61;2&#41;</code> valid and equivalent.</p>
 <p>The following examples illustrate how to define and call functions using positional and keyword arguments. Additionally, we show that the approaches can be combined. Note that positional arguments necessarily require a semicolon for its definition, but accept a semicolon or a comma during calls.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
