--- a/PAGES/9e_staticVectors/index.html
+++ b/PAGES/9e_staticVectors/index.html
@@ -480,7 +480,7 @@ section a:hover{
                 <h2> LINKS TO SECTIONS </h2>
             </div>
                 <div class="modal-body">
-                    To quickly access a specific section of this page, simply hover over the title of the desired section and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
+                    To quickly share a link that goes to a specific section, hover over the title and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
                 <span class="brmine"></span>
             </div>
             <div class="modal-header">
