--- a/PAGES/3d_vectorizing/index.html
+++ b/PAGES/3d_vectorizing/index.html
@@ -2739,7 +2739,7 @@ z &#61; map&#40;&#43;, x, y&#41;        # recall that &#96;&#43;&#96; is both an
 <p>Broadcasting allows functions to be applied element-wise, significantly expanding their range of applications. The feature is implemented by simply appending a dot <strong> <em>after</em></strong> the name of the function, as in <code>foo.&#40;x&#41;</code>. </p>
 <p>Remarkably, <strong>any function</strong> <code>foo</code> <strong>has a broadcasting counterpart</strong> <code>foo.</code>. This implies that the functionality is automatically available for all user-defined functions. Additionally, broadcasting isn&#39;t restricted to numeric collections, applying to any iterable collection regardless of its elements. For instance, we&#39;ll show below that it can be used for string manipulation.</p>
 <p>Similarly to <code>map</code>, broadcasting can be applied to both single- and multiple-argument functions. Each case warrants separate consideration. </p>
-<p>In the case of single-argument functions, broadcasting <code>foo</code> over a collection <code>x</code> returns a new collection with  <em>i</em>-th element <code>foo&#40;x&#91;i&#93;&#41;</code>. The following examples demonstrate its usage.</p>
+<p>In the case of single-argument functions, broadcasting <code>foo</code> over a collection <code>x</code> returns a new collection with <code>foo&#40;x&#91;i&#93;&#41;</code> as its  <em>i</em>-th element. The following examples demonstrate its usage.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2773,7 +2773,7 @@ x &#61; &#91;1,2,3&#93;</code></pre>
  9</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>As for multiple-argument functions, suppose a function <code>foo</code> and collections <code>x</code> and <code>y</code>. Then, <code>foo.&#40;x,y&#41;</code> returns a new collection with  <em>i</em>-th element <code>foo&#40;x&#91;i&#93;,y&#91;i&#93;&#41;</code>. </p>
+<p>As for multiple-argument functions, suppose a function <code>foo</code> and collections <code>x</code> and <code>y</code>. Then, <code>foo.&#40;x,y&#41;</code> returns a new collection with <code>foo&#40;x&#91;i&#93;,y&#91;i&#93;&#41;</code> as its  <em>i</em>-th element. </p>
 <p>Importantly, <strong>collections with different sizes aren't allowed</strong>, establishing a clear contrast between broadcasting and <code>map</code>. We&#39;ll see later that the sole exception to this rule is when one of the objects is a scalar &#40;or a single-element collection&#41;.</p>
 <p>To illustrate the usage, we make use of the function <code>max</code>, which returns the maximum of its arguments &#40;e.g., <code>max&#40;1,2&#41;</code> returns <code>2</code>&#41;.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
@@ -3272,7 +3272,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 8, 2024 
+          © Martin Alfaro <br>Last Modified September 9, 2024 
       </span> 
   </div> 
 </footer>
