--- a/PAGES/4a_logical/index.html
+++ b/PAGES/4a_logical/index.html
@@ -948,13 +948,13 @@ color: white;
   /* version blue, conceived by use of code only */
    
   .copy-button {
-    cursor        : pointer;
-    border        : none;
-    font-size     : 12px;
-    text-transform: lowercase;
-    font-weight   : 500;
-    padding       : 2px 10px 2px;
-      /* background-color:   #3f6b4b; */
+    cursor          : pointer;
+    border          : none;
+    font-size       : 12px;
+    text-transform  : lowercase;
+    font-weight     : 500;
+    padding         : 2px 10px 2px;
+    /* background-color:   #3f6b4b; */
     background-color: rgb(63,99,136);
     position        : absolute;
     top             : 0px;
@@ -1339,32 +1339,32 @@ color: white;
   ============================*/
 /* COLLAPSIBLE OUTPUT WITH IMGS */
 .img_output{
-  text-indent:0;
-  margin:0;
-  padding:0;  
-  background-color: rgba(24,24,24,255);  
+  text-indent     : 0;
+  margin          : 0;
+  padding         : 0;
+  background-color: rgba(24,24,24,255);
 }  
 
 .img_output_in_modal{
-  text-indent:0;
-  margin:0;
-  padding:0;  
-  background-color: rgba(24,24,24,255);  
+  text-indent     : 0;
+  margin          : 0;
+  padding         : 0;
+  background-color: rgba(24,24,24,255);
 }  
 
 
 .img_output_old{
-  text-indent:0;
-  margin:0;
-  padding:0;  
-  background-color: rgba(30,30,30,255);  
+  text-indent     : 0;
+  margin          : 0;
+  padding         : 0;
+  background-color: rgba(30,30,30,255);
 }  
 
 .img_output_in_modal_old{
-  text-indent:0;
-  margin:0;
-  padding:0;  
-  background-color: rgba(30,30,30,255);  
+  text-indent     : 0;
+  margin          : 0;
+  padding         : 0;
+  background-color: rgba(30,30,30,255);
 }  
 
 
@@ -2914,7 +2914,7 @@ are_all_positive &#61; all.&#40;i -&gt; i &gt; 0, &#91;x,y&#93;&#41;
 is_one_positive  &#61; any.&#40;i -&gt; i &gt; 0, &#91;x,y&#93;&#41;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>are_all_positive</code> # all elements in &#39;y&#39; are positive, but not in &#39;x&#39;<br/><div class="akin_to_pre">2-element BitVector:
  0
- 1</div> </div><br/> <div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>is_one_positive</code> # at least one element of &#39;x&#39; and &#39;y&#39; is positive<br/><div class="akin_to_pre">2-element BitVector:
+ 1</div> </div><br/> <div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>is_one_positive</code> # at least one element of &#39;x&#39; and of &#39;y&#39; is positive<br/><div class="akin_to_pre">2-element BitVector:
  1
  1</div> </div></div> </div>   </details></div>
 <p>      </div>
