--- a/PAGES/4b_conditionals/index.html
+++ b/PAGES/4b_conditionals/index.html
@@ -2595,8 +2595,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>In many real-world applications, we often encounter situations where different actions need to be taken, depending on varying conditions. To handle these scenarios effectively, programs must be able to adapt to different situations and make decisions during execution.</p>
-<p>Conditional statements provide this capability. They allowing for contingent executions of code blocks, where each code block is referred to as a <span style="color: rgb(62, 121, 180);"><strong>branch</strong></span>. Based on the number of branches, there are three types of conditional statements:</p>
+<p>In many real-world applications, programs may need to execute different operations depending on the input provided. To handle these scenarios effectively, programs must then be able to adapt the code accordingly. Conditional statements provide exactly this capability. They allow for contingent executions of code blocks, where each code block is referred to as a <span style="color: rgb(62, 121, 180);"><strong>branch</strong></span>. </p>
+<p>Based on the number of branches, there are three types of conditional statements:</p>
 <div class="itemNoSpace"><ul>
 <li><p><span style="color: rgb(62, 121, 180);"><strong>if-then statements</strong></span>, which consist of a <strong>single branch</strong>. They run a specific operation only if a condition is met, with no operation performed otherwise.</p>
 </li>
