--- a/PAGES/4b_conditionals/index.html
+++ b/PAGES/4b_conditionals/index.html
@@ -2595,8 +2595,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>In many real-world applications, programs may need to execute different operations depending on the input provided. To handle these scenarios effectively, programs must then be able to adapt the code accordingly. Conditional statements provide exactly this capability. They allow for contingent executions of code blocks, where each code block is referred to as a <span style="color: rgb(62, 121, 180);"><strong>branch</strong></span>. </p>
-<p>Based on the number of branches, there are three types of conditional statements:</p>
+<p>In many real-world applications, programs may need to execute different operations depending on the input provided. To handle these scenarios effectively, programs must then be able to adapt the code accordingly. Conditional statements provide exactly this capability, allowing for contingent executions of code blocks.</p>
+<p>Each code block of a conditional statement is referred to as a <span style="color: rgb(62, 121, 180);"><strong>branch</strong></span>. Based on the number of branches, there are three types of conditional statements:</p>
 <div class="itemNoSpace"><ul>
 <li><p><span style="color: rgb(62, 121, 180);"><strong>if-then statements</strong></span>, which consist of a <strong>single branch</strong>. They run a specific operation only if a condition is met, with no operation performed otherwise.</p>
 </li>
@@ -2769,7 +2769,7 @@ end</code></pre>
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"><div class="akin_to_pre">"x is negative"</div></div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The examples showcase the flexibility provided by the approach. For instance, the first example shows that <code>elseif</code> eliminates the need to specify what occurs in each scenario: it performs an action if <code>x</code> is positive, another action if <code>x</code> is zero, but does nothing otherwise. Likewise, the second example demonstrates that <code>if</code>, <code>else</code>, and <code>elseif</code> keywords can be combined in multiple ways to achieve the desired program behavior.</p>
+<p>The examples showcase the flexibility provided by the approach. For instance, the first example shows that <code>elseif</code> eliminates the need to specify what occurs in each scenario: it performs an action if <code>x</code> is positive, another action if <code>x</code> is zero, but does nothing otherwise. This contrast with the use of <code>if</code> and <code>else</code>, which requires structuring code to cover all possibilities exhaustively. Likewise, the second example demonstrates that <code>if</code>, <code>else</code>, and <code>elseif</code> keywords can be combined in multiple ways to achieve the desired program behavior.</p>
 <p>      </div>
     </div>
   </div>
